# farich-detector

./: .gitignore  Makefile  Untitled1.ipynb  docker-compose.yaml  farich_read_root_example.ipynb  geometry.py  main.py  reader.py  requirements.txt  unet.ipynb
cpp/: CMakeLists.txt  main.cpp  vcpkg.json
cpp/src/: benchmarks.h  metrics.cpp  metrics.h
cpp/src/farich/: pipeline.h
cpp/src/filters/: FilterByTime.cpp  FilterByTime.h  FilterInPlane.cpp  FilterInPlane.h  IFilter.h
cpp/src/geometry/: Ellipse.cpp  Ellipse.h  Plane.cpp  Plane.h  Point.cpp  Point.h
docs/: research.md  text-vkr.link  Разработка алгоритмов для распознавания черенковских колец в детекторе FARICH 04.04.2023.pptx
notebooks/: Untitled.ipynb  ellipsefitting.ipynb  farich_read_root_example.ipynb  filter.ipynb  metrics.ipynb
notebooks/ml/: dataset.ipynb
src/dataloaders/: __init__.py  base.py  noise.py  point_only.py  root_dataloader.py
src/expirements/: loss.py  save_graphs.py  transforms.py
src/expirements/data_filters/: __init__.py
src/expirements/data_transforms/: __init__.py  prepare_datatypes.py
src/expirements/datasets/: __init__.py  graph.py  matrix.py
src/expirements/layers/: __init__.py  processor.py  smoothing.py  unet_components.py
src/expirements/models/: BaseGNN.py  PlainGCN.py  Unet3d.py  __init__.py
src/expirements/modules/: BaseGNNModule.py  PlainGCNModule.py  Unet3dModule.py  __init__.py
src/filters/: __init__.py  quantile.py
src/generators/: generate_ellipse.py
src/solutions/: ABSSolution.py  __init__.py
src/solutions/Datafiting/: __init__.py  ellipsedatafitting.py  geometry.py
src/utils/geometry/: __init__.py  ellipse.py  plane.py
src/utils/graphs/: __init__.py  creater.py
